Fix for alignment of search button on search page

--- a/_sass/layouts/_search.scss
+++ b/_sass/layouts/_search.scss
@@ -12,6 +12,7 @@
     max-width: calc(100% - 42px);
   }
   button {
+    width: 42px;
     right: 1px;
     line-height: 22px;
   }
